# gputeachingkit-labs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.TXT  README.md  wercker.yml
Module1/: sources.cmake
Module1/DeviceQuery/: config.json  description.markdown  sources.cmake  template.cu
Module10/: sources.cmake
Module10/ImageEqualization/: description.markdown
Module10/ListReduction/: answers.json  config.json  dataset_generator.c  description.markdown  questions.json  sources.cmake  template.cu
Module10/ListScan/: dataset_generator.c  dataset_generator.cpp  description.markdown  sources.cmake
Module10/ThrustListReduction/: answers.json  dataset_generator.c  description.markdown  questions.json  solution.cu  template.cu
Module10/ThrustListScan/: answers.json  config.json  dataset_generator.c  dataset_generator.cpp  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module11/: sources.cmake
Module11/BFS/: description.markdown
Module11/BilateralFilter/: description.markdown
Module11/ImageEqualization/: description.markdown
Module11/ListReduction/: answers.json  dataset_generator.c  description.markdown  template.cu
Module11/ListScan/: answers.json  dataset_generator.c  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module11/ThrustListReduction/: answers.json  dataset_generator.c  description.markdown  questions.json  solution.cu  sources.cmake  template.cu
Module12/BFS/: description.markdown
Module12/BfsQueue/: dataset_generator.c  dataset_generator.cpp  description.markdown  solution.cu  sources.cmake  template.cu
Module12/BilateralFilter/: description.markdown
Module12/QuickHull/: description.markdown
Module14/MatrixMultiplyStream/: description.markdown  template.cu
Module14/VectorAddStream/: dataset_generator.cpp  description.markdown  solution.cu
Module15/MatrixMultiplyStream/: description.markdown
Module2/: sources.cmake
Module2/DeviceQuery/: config.json  description.markdown
Module2/ImageBlur/: answers.json  solution.cu  template.cu
Module2/VectorAdd/: config.json  dataset_generator.c  description.markdown  solution.cu  sources.cmake  template.cu
Module21/OpenACCVectorAdd/: description.markdown  (+2 more)
Module24/: sources.cmake
Module3/: sources.cmake
Module4/: sources.cmake
Module6/: sources.cmake
Module7/: sources.cmake
Module8/: sources.cmake
Module9/: sources.cmake
support/: .clang-format  .gitignore  Makefile  common_suggestions.markdown  make_lab_handout.py  runmp.sh  sources.cmake  wb.h  wbAssert.h  wbCUDA.h  wbComparator.h  wbDataGenerator.cpp  wbDataGenerator.h  wbDataGenerator_test.cpp  wbDirectory.cpp  wbDirectory.h  wbExit.cpp  wbExport.cpp  wbExport.h  wbFile.cpp  wbFile.h  wbImage.cpp  wbImage.h  wbImport.cpp  wbImport.h  wbInit.cpp  wbLogger.cpp  wbLogger.h  wbMD5.h  wbMPI.cpp  wbMPI.h  wbMalloc.h  wbMemoryManager.cpp  wbPPM.cpp  wbSandbox.cpp  wbSolution.cpp  wbSparse.cpp  wbString.h  wbTimer.cpp  wbTimer.h  (+1 more)
(+128 files in other folders)
